--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,58 @@
 /*font-family: 'Montserrat', sans-serif;
 font-family: 'Lato', sans-serif;
+#2c3e50, #18bc9c, #212529.
  * Estilos de tu proyecto
  */
 
  body {
    background: #18bc9c;
+   margin: 0;
+   padding: 0;
  }
 
- header {
-   font-family: 'Lato', sans-serif;
+ .header {
+   background-color: #2c3e50;
+   height: 15vh;
+   position: absolute;
+   text-align: center;
+   top: 0;
+   width: 100%;
  }
 
-h1 {
+ ul li {
+   margin-top: 3vh;
+   display: inline-block;
+   position: relative;
+ }
+
+ a {
+   text-align: center;
+   color: white;
+   font-family: 'Montserrat', sans-serif;
+   font-weight: bolder;
+   padding-right: 8vh;
+   text-decoration: none;
+}
+
+li:first-child {
+  font-size: 4vh;
+  padding-right: 75vh;
+}
+
+li:last-child {
+  padding-left: 6vh;
+}
+
+/*h1 {
   background-color: #212529;
   color: white;
   height: 12vh;
   padding-left: 18vh;
   padding-top: 5vh;
-}
+}*/
 
 nav {
-  float: right;
+
 
 }
 
