--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ font-family: 'Lato', sans-serif;
 
  .header {
    background-color: #2c3e50;
-   height: 15vh;
+   height: 20vh;
    position: absolute;
    text-align: center;
    top: 0;
@@ -20,7 +20,7 @@ font-family: 'Lato', sans-serif;
  }
 
  ul li {
-   margin-top: 3vh;
+   margin-top: 8vh;
    display: inline-block;
    position: relative;
  }
@@ -36,13 +36,59 @@ font-family: 'Lato', sans-serif;
 
 li:first-child {
   font-size: 4vh;
-  padding-right: 75vh;
+  padding-right: 60vh;
 }
 
 li:last-child {
-  padding-left: 6vh;
+  padding-left: 2vh;
 }
 
+.profile {
+  margin-top: 25vh;
+  margin-left: 75vh;
+}
+
+.start {
+  text-align: center;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 80px;
+  font-weight: bolder;
+  padding-top: 0;
+}
+
+.line {
+  width: 30%;
+}
+
+.fa-star {
+  color: white;
+  font-size: 4vh;
+  padding-left: 50%;
+}
+
+p {
+  text-align: center;
+  color: white;
+  font-family: 'Lato', sans-serif;
+  font-size: 4.5vh;
+}
+
+#portfolio {
+  background: white;
+}
+
+.portafolio {
+  color: #2c3e50; /*#18bc9c, #212529;*/
+  font-family: 'Montserrat', sans-serif;
+  font-size: 7vh;
+  font-weight: bold;
+  text-align: center;
+}
+
+h2 > i.fa-star{
+  color: #2c3e50;
+}
 /*h1 {
   background-color: #212529;
   color: white;
