--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ li:last-child {
   width: 30%;
 }
 
-.fa-star {
+#uno {
   color: white;
   font-size: 4vh;
   padding-left: 50%;
@@ -88,6 +88,8 @@ p {
 
 h2 > i.fa-star{
   color: #2c3e50;
+  font-size: 4vh;
+  padding-left: 50%;
 }
 
 /*portfolio*/
@@ -106,4 +108,32 @@ h2 > i.fa-star{
 div.img img {
   height: 35vh;
   width: 45vh;
+}
+
+/*about*/
+.about > p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 7vh;
+  font-weight: bold;
+}
+
+.paragraph {
+  color: white;
+  display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5vh;
+  height: 30vh;
+  margin-left: 30vh;
+  position: relative;
+  width: 50vh;
+}
+
+.download {
+  border: 2px solid white;
+  border-radius: 10%;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5vh;
+  height:
+  padding: 5vh;
+  width: 21vh;
 }
