--- a/css/main.css
+++ b/css/main.css
@@ -156,21 +156,44 @@ div.img img {
 }
 /*footer*/
 
-.footer {
-  height: 200px;
-  display: block;
-  background: #2c3e50;
-  display: inline-flex;
-  position: absolute;
+footer {
+  background-color: #2c3e50;
+  height: 300px;
+}
+
+.foot {
+  color: white;
+  display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 23px;
+  font-weight: bold;
+  height: 90px;
+  margin-left: 18vh;
+  margin-top: 9vh;
   text-align: center;
-  width: 100%;
+  width: 20%;
+}
+
+.foottwo {
+  color: white;
+  display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 13px;
+  margin-left: 18vh;
+  padding-bottom: 0;
+  text-align: center;
+  width: 20%;
 }
 
 .copyright {
-  position: absolute;
-   padding-top: 1px;
    background-color: #343a40;
+   padding-top: 1px;
+   height: 70px;
    text-align: center;
-   height: 100px;
    width: 100%;
+ }
+
+ .copyright > p {
+   font-size: 15px;
+   padding-top: 5px;
  }
