--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,23 @@ div.img img {
 .contact {
   background-color: white;
 }
+
+.buttondos {
+  background-color: #18bc9c;
+  border: 2px solid white;
+  border-radius: 10%;
+  font-size: 2.5vh;
+  height: 10px;
+  margin-left: 45%;
+  margin-bottom: 10%;
+  padding: .5vh;
+  width: 25vh;
+}
+
+form {
+  padding-left: 30%;
+}
+
 /*footer*/
 
 footer {
@@ -185,6 +202,8 @@ footer {
   width: 20%;
 }
 
+/*parte del Copyright*/
+
 .copyright {
    background-color: #343a40;
    padding-top: 1px;
@@ -196,16 +215,4 @@ footer {
  .copyright > p {
    font-size: 15px;
    padding-top: 5px;
- }
-
- .buttondos {
-   background-color: #18bc9c;
-   border: 2px solid white;
-   border-radius: 10%;
-   font-size: 2.5vh;
-   height: 10px;
-   margin-left: 45%;
-   margin-bottom: 10%;
-   padding: 1vh;
-   width: 25vh;
  }
